deploy/gke/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: raalisence
  labels:
    app: raalisence
spec:
  type: ClusterIP
  selector:
    app: raalisence
  ports:
    - name: http
      port: 80
      targetPort: 8080
